--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top z-50">
     <div class="container-lg">
       <a class="navbar-brand text-primary font-bold text-xl" href="index.html">
-        <i class="fa fa-apple mr-2"></i>AppStore
+        <i class="fa fa-github mr-2"></i>deepsleep-v3的App超市！
       </a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
