--- a/upload-app.html
+++ b/upload-app.html
@@ -209,7 +209,7 @@
                 <div class="flex flex-col items-center justify-center">
                   <i class="fa fa-file-archive-o text-4xl text-muted mb-2"></i>
                   <p class="text-muted mb-1">点击或拖拽应用文件到这里上传</p>
-                  <p class="text-xs text-muted">支持 APK (Android), IPA (iOS), APPX (Windows) 格式</p>
+                  <p class="text-xs text-muted">支持 APK (Android), IPA (iOS), appx, msix, msi (Windows)，pkg, dmg (macOS)格式</p>
                 </div>
                 <div id="appFilePreview" class="hidden mt-3">
                   <div class="flex items-center">
