To be continue 2nd.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               dark: '#1D2129',
               light: '#F2F3F5',
               muted: '#86909C',
-              greenyellow: '#57bcbe',
+              greenyellow: '#adff2f',
             },
             fontFamily: {
               inter: ['Inter', 'system-ui', 'sans-serif'],
@@ -46,8 +46,8 @@
         transform: translateY(-5px);
         box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
       }
-      .btn-yellowgreen {
-        @apply bg-[rgb(rgb(87, 188, 190))] text-white hover:bg-yellow-600 focus:ring-yellow-400 shadow-btn transform hover:scale-105;
+      .btn-cyan {
+        @apply bg-[rgb(87,188,190)] text-white hover:bg-cyan-600 focus:ring-cyan-400 shadow-md transform hover:scale-105;
       }
     }
   </style>
@@ -128,7 +128,7 @@
               <div class="carousel-caption d-none d-md-block bg-dark/50 rounded-lg p-4">
                 <h5 class="text-white text-xl font-bold">Minecraft腐竹专区</h5>
                 <p class="text-white">各种服务端，Forge、Fabric、Spigot、Mohist....</p>
-                <button class="btn-yellowgreen">go~</button>
+                <button class="btn-cyan">GO~~</button>
               </div>
             </div>
             </div>
